<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#59E1E1E1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_title"
            android:textColor="#2B2B2B"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <ImageButton
            android:id="@+id/bt_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:src="@drawable/back_black"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginLeft="30dp"
            android:layout_marginTop="69dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creating1"
                android:textColor="#000000"
                android:textSize="25sp" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/attribute1"
                android:textColor="#797979"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/trip_title"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint1"
                android:inputType="text"
                android:imeOptions="actionUnspecified">
            </EditText>
        </TableRow>

        <TableRow
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attribute3"
                android:textColor="#797979"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/trip_date"
                android:imeOptions="actionUnspecified"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint2"
                android:inputType="date">

            </EditText>
        </TableRow>

        <TableRow
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attribute4"
                android:textColor="#797979"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/trip_member"
                android:imeOptions="actionUnspecified"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint4"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attribute5"
                android:textColor="#797979"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/location"
                android:imeOptions="actionUnspecified"
                android:hint="@string/hint3"
                android:inputType="text">
            </EditText>

        </TableRow>
    </TableLayout>
    <ImageButton
        android:id="@+id/get_loc"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:background="#0000"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="283dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/location_fill" />
    <ImageButton
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:id="@+id/create_btn"
        android:background="@mipmap/creating"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/todo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/create"
        android:textSize="15sp"
        android:textColor="#E7E7E7"/>
</RelativeLayout>