<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.touralbum.ui.events.EventsFragment"
        android:label="@string/title_events"
        tools:layout="@layout/activity_event_list" />

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.example.touralbum.ui.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/activity_dairy_list" />

    <fragment
        android:id="@+id/navigation_weather"
        android:name="com.example.touralbum.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/activity_weather" />

</navigation>