<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">
<TextView
    android:id="@+id/text_v1"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:text="@string/event_create"
    android:gravity="center"
    android:textSize="25sp"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/back_ward1"
    android:text="@string/backward"
    android:textSize="25sp"
    android:textColor="#0076FF"
    android:backgroundTint="#0000"
    style="?android:attr/borderlessButtonStyle"
    tools:targetApi="lollipop" />
<ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text_v1">
</ListView>
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="16dp"
    android:src="@drawable/add"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:contentDescription="@string/todo" />
</RelativeLayout>