<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back_ward"
            android:text="@string/backward"
            android:textSize="25sp"
            android:textColor="#0076FF"
            android:background="#0000"/>
        <TextView
            android:id="@+id/text_v"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/tour_create"
            android:gravity="center"
            android:textSize="22sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:text="@string/create_note"
            android:layout_alignParentEnd="true"
            android:textSize="25sp"
            android:textColor="#0076FF"
            android:background="#0000"
            android:layout_marginEnd="5dp"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/note_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
</LinearLayout>